--- a/fxs-platform-web/src/main/resources/templates/litigant_consulting_free_detail.html
+++ b/fxs-platform-web/src/main/resources/templates/litigant_consulting_free_detail.html
@@ -17,6 +17,20 @@
 				<section class="col-md-12 col-sm-12 writeInfo space20">
 					<div class="row">
 						<div class="col-md-10 col-sm-10">
+							<ul class="writeInfoText ulCell myCell caseBox">
+								<div class="row">
+									<ul>
+										<li><h4>律师反馈信息</h4></li>
+									</ul>
+								</div>
+								<div class="row" th:each="feedbackInfo : ${caseDetailInfo.caseFeedbackInfo}">
+									<ul>
+										<li><b>律师： <span th:text="${feedbackInfo.lawyerName}"></span></b></li>
+										<li><b>报价： <span th:text="${feedbackInfo.counselFee}"></span></b></li>
+										<li><b>意见： <span th:text="${feedbackInfo.lawyerComments}"></span></b></li>
+									</ul>
+								</div>
+							</ul>
 							<ul class="writeInfoText ulCell myCell">
 								<li class="orange">律师正在查看中，预计在24小时内为您提供解答。</li>
 								<li th:text="${caseDetailInfo.comments}"></li>
