--- a/fxs-platform-web/src/main/resources/templates/fragments/footer.html
+++ b/fxs-platform-web/src/main/resources/templates/fragments/footer.html
@@ -3,6 +3,7 @@
 <div th:fragment="footer">
 	<footer>
 		<script src="bootstrap/js/jquery.min.js"></script>
+		<script src="js/jquery.validate.js"></script>
 		<script src="bootstrap/js/bootstrap.min.js"></script>
 		<ul class="list-group">
 			<li>© 2013-2017, shuai.com, Inc. All Rights Reserved.
