--- a/fxs-platform-web/src/main/resources/templates/userRegister.html
+++ b/fxs-platform-web/src/main/resources/templates/userRegister.html
@@ -23,19 +23,19 @@
 								        </div>
 	                                    <form th:action="@{/user}" th:method="POST" th:object="${user}">
 	                                        <div class="form-group">
-	                                            <input type="text" class="form-control" th:field="*{username}" th:id="username" placeholder="输入用户名" />
+	                                            <input minlength="2" maxlength="6" type="text" required class="form-control" th:field="*{username}" th:id="username" placeholder="输入用户名" />
 	                                        </div>
 	                                        <div class="form-group">
-	                                            <input type="text" class="form-control" th:field="*{email}" th:id="email" placeholder="输入邮箱" />
+	                                            <input type="email" required class="form-control" th:field="*{email}" th:id="email" placeholder="输入邮箱" />
 	                                        </div>
 	                                        <div class="form-group">
 	                                            <input type="text" class="form-control" th:field="*{mobile}" th:id="mobile" placeholder="输入电话号码" />
 	                                        </div>
 	                                        <div class="form-group">
-	                                            <input type="password" class="form-control" th:field="*{password}" th:id="password" placeholder="输入密码" />
+	                                            <input type="password" required class="form-control" th:field="*{password}" th:id="password" placeholder="输入密码" />
 	                                        </div>
 	                                        <div class="form-group">
-	                                            <input type="password" class="form-control" th:id="confirm-password" placeholder="确认密码" />
+	                                            <input type="password" required class="form-control" th:id="confirm-password" placeholder="确认密码" />
 	                                        </div>
 	                                        <div class="form-group">
 												<select class="form-control" th:id="userProfiles" th:field="*{userProfiles}" style="background-color: black;">
