--- a/fxs-platform-web/src/main/resources/templates/lawyer_lawsuit_detail.html
+++ b/fxs-platform-web/src/main/resources/templates/lawyer_lawsuit_detail.html
@@ -184,6 +184,7 @@
 	</div>
 	<div th:replace="fragments/public_footer :: public-footer"></div>
 	<script th:inline="javascript">
+		/*<![CDATA[*/
 		$(function() {
 			$("#addFeedback").on("click", function() {
 				$.ajax({
@@ -214,6 +215,7 @@
 				window.location.assign(location.href);
 			})
 		})
+		/*]]>*/
 	</script>
 </body>
 </html>
