--- a/fxs-platform-web/src/main/resources/templates/litigant_consulting_free_detail.html
+++ b/fxs-platform-web/src/main/resources/templates/litigant_consulting_free_detail.html
@@ -137,6 +137,7 @@
 	</div>
 	<div th:replace="fragments/public_footer :: public-footer" ></div>
 	<script th:inline="javascript">
+		/*<![CDATA[*/
 		$(function() {
 			$("#resolveDispute").on("click", function() {
 				$.ajax({
@@ -187,6 +188,7 @@
 				window.location.assign(location.href);
 			})
 		})
+		/*]]>*/
 	</script>
 </body>
 </html>
