--- a/fxs-platform-web/src/main/resources/templates/litigant_lawsuit_detail.html
+++ b/fxs-platform-web/src/main/resources/templates/litigant_lawsuit_detail.html
@@ -144,13 +144,19 @@
 	</div>
 	<div th:replace="fragments/public_footer :: public-footer" ></div>
 	<script th:inline="javascript">
+		/*<![CDATA[*/
 		$(function() {
 			var acceptedFeddback = '';
-			$("#lawyerFeedback").on("click", 'a', function(e) {
+			$("#lawyerFeedback").on("click", 'li', function(e) {
 				e.preventDefault()
 
-				$(this).parent().parent().parent().children().removeAttr("style")
-				$(this).parent().parent().css("background-color", "green")
+				var sections = $(this).parent().parent().children();
+		
+				for (var index = 0; index < sections.length; index ++) {
+					$($(sections.get(index)).children().get(0)).attr("style","")
+				}
+		
+				$(this).css("background-color", "green")
 				acceptedFeddback = $(this).attr("id")
 			})
 			$("#resolveDispute").on("click", function() {
@@ -203,6 +209,7 @@
 				window.location.assign(location.href);
 			})
 		})
+		/*]]>*/
 	</script>
 </body>
 </html>
