--- a/fxs-platform-web/src/main/resources/templates/userRegister.html
+++ b/fxs-platform-web/src/main/resources/templates/userRegister.html
@@ -24,15 +24,18 @@
 	                                    <form th:action="@{/user}" th:method="POST" th:object="${user}">
 	                                        <div class="form-group">
 	                                            <input type="text" class="form-control" th:field="*{username}" th:id="username" placeholder="输入用户名" />
+	                                        	<span th:if="${#fields.hasErrors('username')}" th:errors="*{username}"></span>
 	                                        </div>
 	                                        <div class="form-group">
 	                                            <input type="email" class="form-control" th:field="*{email}" th:id="email" placeholder="输入邮箱" />
+	                                            <span th:if="${#fields.hasErrors('email')}" th:errors="*{email}"></span>
 	                                        </div>
 	                                        <div class="form-group">
 	                                            <input type="text" class="form-control" th:field="*{mobile}" th:id="mobile" placeholder="输入电话号码" />
 	                                        </div>
 	                                        <div class="form-group">
 	                                            <input type="password" class="form-control" th:field="*{password}" th:id="password" placeholder="输入密码" />
+	                                            <span th:if="${#fields.hasErrors('password')}" th:errors="*{password}"></span>
 	                                        </div>
 	                                        <div class="form-group">
 	                                            <input type="password" class="form-control" th:id="confirm-password" placeholder="确认密码" />
