--- a/fxs-platform-web/src/main/resources/templates/litigant_lawsuit.html
+++ b/fxs-platform-web/src/main/resources/templates/litigant_lawsuit.html
@@ -15,7 +15,7 @@
 			<section class="col-md-12 col-sm-12 writeInfo space20">
 				<div class="row">
 					<div class="col-md-8 col-sm-8 mybox">
-						<ul class="writeInfoText ulCell myCell" th:each="myLawsuit : ${pageableData}">
+						<ul class="writeInfoText ulCell myCell" th:each="myLawsuit : ${session.pageableData}">
 							<li>起诉地点 : 南京</li>
 							<li>案件类型 : <span th:text="${myLawsuit.falltypusType}"></span></li>
 							<li class="gray">
@@ -25,7 +25,7 @@
 							<br />
 							<a th:href="@{/user/case/litigant/lawsuit/viewDetail/{id}(id=${myLawsuit.id})}">查看详情</a>
 						</ul>
-						<div th:if="${not #lists.isEmpty(pageableData)}">
+						<div th:if="${not #lists.isEmpty(session.pageableData)}">
 							<div th:include="fragments/page :: pager" th:remove="tag"></div>
 						</div>
 					</div>
