--- a/fxs-platform-web/src/main/resources/templates/fragments/page.html
+++ b/fxs-platform-web/src/main/resources/templates/fragments/page.html
@@ -6,36 +6,36 @@
 <body>
 <div th:fragment="pager">
     <div class="text-right" th:with="baseUrl=${#httpServletRequest.getRequestURL().toString()},pars=${#httpServletRequest.getQueryString() eq null ? '' : new String(#httpServletRequest.getQueryString().getBytes('iso8859-1'), 'UTF-8')}">
-        <ul style="margin:0px;" class="pagination" th:with="newPar=${new java.lang.String(pars eq null ? '' : pars).replace('page='+(pageableData.number), '')},
+        <ul style="margin:0px;" class="pagination" th:with="newPar=${new java.lang.String(pars eq null ? '' : pars).replace('page='+(session.pageableData.number), '')},
                                                 pageTmpUrl=${baseUrl+'?'+newPar},
                                                 pageUrl=${pageTmpUrl.endsWith('&amp;') ? pageTmpUrl.substring(0, pageTmpUrl.length()-1):pageTmpUrl}" >
 
             <li><a href="#" th:href="@{${pageUrl}(page=0)}">首页</a></li>
-            <li th:if="${pageableData.hasPrevious()}"><a href="#" th:href="@{${pageUrl}(page=${pageableData.number-1})}">上一页</a></li>
+            <li th:if="${session.pageableData.hasPrevious()}"><a href="#" th:href="@{${pageUrl}(page=${session.pageableData.number-1})}">上一页</a></li>
 
             <!--总页数小于等于10-->
-            <div th:if="${(pageableData.totalPages le 10) and (pageableData.totalPages gt 0)}" th:remove="tag">
-                <div th:each="pg : ${#numbers.sequence(0, pageableData.totalPages - 1)}" th:remove="tag">
-                        <span th:if="${pg eq pageableData.getNumber()}" th:remove="tag">
+            <div th:if="${(session.pageableData.totalPages le 10) and (session.pageableData.totalPages gt 0)}" th:remove="tag">
+                <div th:each="pg : ${#numbers.sequence(0, session.pageableData.totalPages - 1)}" th:remove="tag">
+                        <span th:if="${pg eq session.pageableData.getNumber()}" th:remove="tag">
                             <li class="active"><span class="current_page line_height" th:text="${pg+1}">${pageNumber}</span></li>
                         </span>
-                    <span th:unless="${pg eq pageableData.getNumber()}" th:remove="tag">
+                    <span th:unless="${pg eq session.pageableData.getNumber()}" th:remove="tag">
                             <li><a href="#" th:href="@{${pageUrl}(page=${pg})}" th:text="${pg+1}"></a></li>
                         </span>
                 </div>
             </div>
 
             <!-- 总数数大于10时 -->
-            <div th:if="${pageableData.totalPages gt 10}" th:remove="tag">
-                <li th:if="${pageableData.number-2 ge 0}"><a href="#" th:href="@{${pageUrl}(page=${pageableData.number}-2)}" th:text="${pageableData.number-1}"></a></li>
-                <li th:if="${pageableData.number-1 ge 0}"><a href="#" th:href="@{${pageUrl}(page=${pageableData.number}-1)}" th:text="${pageableData.number}"></a></li>
-                <li class="active"><span class="current_page line_height" th:text="${pageableData.number+1}"></span></li>
-                <li th:if="${pageableData.number+1 lt pageableData.totalPages}"><a href="#" th:href="@{${pageUrl}(page=${pageableData.number}+1)}" th:text="${pageableData.number+2}"></a></li>
-                <li th:if="${pageableData.number+2 lt pageableData.totalPages}"><a href="#" th:href="@{${pageUrl}(page=${pageableData.number}+2)}" th:text="${pageableData.number+3}"></a></li>
+            <div th:if="${session.pageableData.totalPages gt 10}" th:remove="tag">
+                <li th:if="${session.pageableData.number-2 ge 0}"><a href="#" th:href="@{${pageUrl}(page=${session.pageableData.number}-2)}" th:text="${session.pageableData.number-1}"></a></li>
+                <li th:if="${session.pageableData.number-1 ge 0}"><a href="#" th:href="@{${pageUrl}(page=${session.pageableData.number}-1)}" th:text="${session.pageableData.number}"></a></li>
+                <li class="active"><span class="current_page line_height" th:text="${session.pageableData.number+1}"></span></li>
+                <li th:if="${session.pageableData.number+1 lt session.pageableData.totalPages}"><a href="#" th:href="@{${pageUrl}(page=${session.pageableData.number}+1)}" th:text="${session.pageableData.number+2}"></a></li>
+                <li th:if="${session.pageableData.number+2 lt session.pageableData.totalPages}"><a href="#" th:href="@{${pageUrl}(page=${session.pageableData.number}+2)}" th:text="${session.pageableData.number+3}"></a></li>
             </div>
-            <li th:if="${pageableData.hasNext()}"><a href="#" th:href="@{${pageUrl}(page=${pageableData.number+1})}">下一页</a></li>
-            <li><a href="#" th:href="${pageableData.totalPages le 0 ? pageUrl+'page=0':pageUrl+'&amp;page='+(pageableData.totalPages-1)}">尾页</a></li>
-            <li><span th:utext="'共'+${pageableData.totalPages}+'页 / '+${pageableData.totalElements}+' 条'"></span></li>
+            <li th:if="${session.pageableData.hasNext()}"><a href="#" th:href="@{${pageUrl}(page=${session.pageableData.number+1})}">下一页</a></li>
+            <li><a href="#" th:href="${session.pageableData.totalPages le 0 ? pageUrl+'page=0':pageUrl+'&amp;page='+(session.pageableData.totalPages-1)}">尾页</a></li>
+            <li><span th:utext="'共'+${session.pageableData.totalPages}+'页 / '+${session.pageableData.totalElements}+' 条'"></span></li>
         </ul>
     </div>
 </div>
