--- a/fxs-platform-web/src/main/resources/templates/public_add_dispute_info.html
+++ b/fxs-platform-web/src/main/resources/templates/public_add_dispute_info.html
@@ -47,6 +47,24 @@
 												<br /><br />
 												答案 #4 : &nbsp; 
 												<input type="text" th:field="*{answer}" id='answer4' size="50"/>
+												<br /><br />
+												答案 #5 : &nbsp; 
+												<input type="text" th:field="*{answer}" id='answer5' size="50"/>
+												<br /><br />
+												答案 #6 : &nbsp; 
+												<input type="text" th:field="*{answer}" id='answer6' size="50"/>
+												<br /><br />
+												答案 #7 : &nbsp; 
+												<input type="text" th:field="*{answer}" id='answer7' size="50"/>
+												<br /><br />
+												答案 #8 : &nbsp; 
+												<input type="text" th:field="*{answer}" id='answer8' size="50"/>
+												<br /><br />
+												答案 #9 : &nbsp; 
+												<input type="text" th:field="*{answer}" id='answer9' size="50"/>
+												<br /><br />
+												答案 #10 : &nbsp; 
+												<input type="text" th:field="*{answer}" id='answer10' size="50"/>
 											</div>
 										</div>
 									</td>
