--- a/fxs-platform-web/src/main/resources/templates/litigant_lawsuit_detail.html
+++ b/fxs-platform-web/src/main/resources/templates/litigant_lawsuit_detail.html
@@ -386,8 +386,7 @@
 					type : 'PUT',
 					url : '/user/case/update/' + [[${caseDetailInfo.id}]],
 					data : JSON.stringify({
-						"status": "5",
-						"acceptedLawyerFeedback": acceptedFeddback
+						"status": "5"
 					}),
 					contentType : "application/json; charset=utf-8",
 					success : function(data) {
