--- a/fxs-platform-web/src/main/resources/templates/public_list_dispute_info.html
+++ b/fxs-platform-web/src/main/resources/templates/public_list_dispute_info.html
@@ -9,8 +9,8 @@
 		<div class="container-fluid">
 			<table style="border-collapse: collapse;" border="1" bordercolor="#006699" width="500">
 				<tr bgcolor="lightblue">
-					<th>纷争编号</th>
-					<th>纷争名称</th>
+					<th>问题编号</th>
+					<th>问题描述</th>
 					<th>是否一级问题</th>
 					<th>类型</th>
 					<th>操作</th>
